Introduced executable Jar build with dependencies Added CommandlineVerifier main class Refactored test class to InteractiveVerifier main class Added Threading to verify command